overflow issue in mobile solved

--- a/style.css
+++ b/style.css
@@ -1,19 +1,33 @@
 body {
     background-color: #8A735CCF;
+    
 }
 
-#menuArea {
-    /* background-image: url("SANDWICH SALAD.jpg");
+/* #menuArea{
+    background-image: url("./images/SANDWICH\ SALAD.jpg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 60%; */
 
-    /* Going to use this to test the words first */
+} */
+#menuArea::after {
+    content:'';
+    background: url("./images/SANDWICH\ SALAD.jpg") no-repeat center center;
+    position: absolute ;
+    top:0px;
+    left: 0px;
+    
+    width:100%;
+    height:100%;
 
-    /* background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%); */
+    z-index:-1;
+    opacity:50%; /* Here is your opacity */
 }
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+    overflow: hidden;
+}
+
 
 .list-group-item {
     background-color: rgba(255, 255, 255, 0);
@@ -87,13 +101,30 @@ p {
     #secCont {
       padding: 0px 0px 0px 0px;
     }
+    /* .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+    } */
 }
 
-@media only screen and (max-width: 545px){
+@media only screen and (max-width: 575px){
     .carousel-inner{
         padding: 0px 0px 0px 0px;
     }
 }
+
+@media only screen and (max-width: 991px){
+    .putCenter{
+        display: flex;
+        justify-content: center;
+    }
+}
+
+
+
 
 .brownColor{
     color: #513928;
